--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
     </div>
 
-    <h1 class="headtr">Tranding Today</h1>
+    <h1 class="headtr">Trending Today</h1>
     <div class="banner">
         <div class="bnr courser">
             <a href="blog7.html" class="ip ny">
@@ -170,7 +170,7 @@
             <h2>Business</h2>
         </div>
         <div class="cat c courser">
-            <h2>Marcket</h2>
+            <h2>Market</h2>
         </div>
         <div class="cat d courser">
             <h2>Science</h2>
